--- a/demo (6-10-2019)/index.html
+++ b/demo (6-10-2019)/index.html
@@ -5,15 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>demo</title>
 
-    <link rel="stylesheet" href="./asset/style/main.css">
     <link rel="stylesheet" href="./asset/fontawesome/css/all.css">
+    <link rel="stylesheet" href="./asset/style/jquery-ui.css">
+    <link rel="stylesheet" href="./asset/style/main.css">
 
+    <script defer src="./asset/js/jquery-1.12.4.js"></script>
+    <script defer src="./asset/js/jquery-ui.js"></script>
     <script defer src="./asset/fontawesome/js/all.js"></script>
     <script defer src="./asset/js/main.js"></script>
 </head>
 
 <body>
 <div id="content">
+    <div id="move-control">
+        <div id="move-left" class="move">
+            <i class=" fa fa-angle-double-left fa-5x icon-move-left"></i>
+        </div>
+        <div id="move-right" class="move">
+            <i class=" fa fa-angle-double-right fa-5x icon-move-right"></i>
+        </div>
+        <div id="move-forward" class="move">
+            <i class=" fa fa-angle-double-up fa-5x icon-move-forward"></i>
+        </div>
+        <div id="move-back" class="move">
+            <i class=" fa fa-angle-double-down fa-5x icon-move-back"></i>
+        </div>
+    </div>
+    <!--<div id="loading" class="lds-dual-ring"></div>-->
+
     <div id="control">
         <div id="button-left">
             <span class=" fa fa-reply fa-2x button-move-left"></span>
@@ -22,14 +41,12 @@
             <span class=" fa fa-share fa-2x button-move-right"></span>
         </div>
     </div>
-    <!--<div id="loading" class="lds-dual-ring"></div>-->
 
     <video id="video" controls="false" muted="true" type="video/mp4">
-        <source src="./asset/video/clip_03.mp4" type="video/mp4">
         <p>Your browser does not support the video element.</p>
     </video>
 
-    <canvas id="canvas" width="900" height="500">
+    <canvas id="canvas" width="900" height="600">
         Your browser does not support the HTML5 canvas tag.
     </canvas>
 </div>
