--- a/demo (11-11-2019)/index.html
+++ b/demo (11-11-2019)/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>demo</title>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <link rel="stylesheet" href="./asset/style/main.css">
+    <link rel="stylesheet" href="./asset/style/main.css"/>
 
     <script defer src="./asset/js/main.js"></script>
-    <script src="https://storage.googleapis.com/vrview/2.0/build/vrview.min.js"></script>
 </head>
-
 <body>
-    <div id='vrview'></div>
+    <img id="image" src="./asset/img/test_019.jpg"/>
+    <div id="panorama"></div>
 </body>
 </html>
